tests/compile_msg/declare/unused_warning_fail.stderr
error: Test for declare syntax warning.
 --> compile_msg/declare/unused_warning_fail.rs:4:3
  |
4 |   compile_error!("Test for declare syntax warning.");
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: assigned id but not be used in anywhere.
 --> compile_msg/declare/unused_warning_fail.rs:7:11
  |
7 |       id: test_id,
  |           ^^^^^^^
  |
help: Remove this line.
 --> compile_msg/declare/unused_warning_fail.rs:7:11
  |
7 |       id: test_id,
  |           ^^^^^^^
